--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ html {
 }
 body {
     height: 100%;    /*高さを100％に設定*/
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 50px 0 ;
     max-width: 1366px;
     max-height: 1024px;
 }
-.appmain {
+/* .appmain {
     margin: 0 auto;
-}
+} */
